--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,9 @@
 # CMake minimum version
 cmake_minimum_required(VERSION 3.5)
 
+# Set policy
+cmake_policy(SET CMP0079 NEW)
+
 # project name and languages
 project(RPaint C CXX RC)
 
